Closed Bug 408990 Opened 18 years ago Closed 18 years ago

gtk: expander in treeview is not the correct size

Categories

(Core :: Widget: Gtk, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9beta3

People

(Reporter: u294409, Assigned: ventnor.bugzilla)

References

Details

Attachments

(3 files, 1 obsolete file)

User-Agent: Opera/9.24 (X11; Linux i686; U; pl; Fedora/8 (Werewolf)) Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9b2pre) Gecko/2007121008 Minefield/3.0b2pre component on the left should look like gtktreeview, but does not. Reproducible: Always Steps to Reproduce: 1. open all history Actual Results: component on the left should look like gtktreeview, but does not. Expected Results: component on the left looks like gtktreeview, but does not.
Attached image actual tree
look at arrows - they look strange (don't know why) and they have no hover effect and they're not animated.
Attached image gtk tree example
notice tree elements - they look like menu items.
The size issue would be because we use the expander element and not the treeview's internal expander. As for hover and active feedback that isn't fixable for Firefox 3 because we don't construct a frame for every expander (I assume for performance reasons) so getting the events for an individual expander is impossible. I can fix the size issue though.
Assignee: nobody → ventnor.bugzilla
Status: UNCONFIRMED → NEW
Component: OS Integration → Widget: Gtk
Ever confirmed: true
Product: Firefox → Core
Attached patch Patch (obsolete) — Splinter Review
This seems to work.
Attachment #295178 - Flags: superreview?(roc)
Attachment #295178 - Flags: review?(roc)
QA Contact: os.integration → gtk
Version: unspecified → Trunk
Shouldn't we rename these functions to make it clear we're talking about a treeview expander, since GTK supports "normal" expanders that we might even want to use one day?
Attached patch Patch 2Splinter Review
Keep around the regular expander code for when we want to use it.
Attachment #295178 - Attachment is obsolete: true
Attachment #295180 - Flags: superreview?(roc)
Attachment #295180 - Flags: review?(roc)
Attachment #295178 - Flags: superreview?(roc)
Attachment #295178 - Flags: review?(roc)
Attachment #295180 - Flags: superreview?(roc)
Attachment #295180 - Flags: superreview+
Attachment #295180 - Flags: review?(roc)
Attachment #295180 - Flags: review+
Attachment #295180 - Flags: approval1.9?
Ventron, mind re-summarizing this bug for what you actually did?
Status: NEW → ASSIGNED
Keywords: checkin-needed
Summary: gtk: treeview → gtk: expander in treeview is not the correct size
Checking in widget/src/gtk2/gtk2drawing.c; /cvsroot/mozilla/widget/src/gtk2/gtk2drawing.c,v <-- gtk2drawing.c new revision: 1.63; previous revision: 1.62 done Checking in widget/src/gtk2/gtkdrawing.h; /cvsroot/mozilla/widget/src/gtk2/gtkdrawing.h,v <-- gtkdrawing.h new revision: 1.48; previous revision: 1.47 done Checking in widget/src/gtk2/nsNativeThemeGTK.cpp; /cvsroot/mozilla/widget/src/gtk2/nsNativeThemeGTK.cpp,v <-- nsNativeThemeGTK.cpp new revision: 1.131; previous revision: 1.130 done
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M11
Also, look at treeview elements. In native GTK they are not flat.
You've made summary wrong! Not the size is important but the style.
Summary: gtk: expander in treeview is not the correct size → gtk: treeview look flat and out-of-place
Can you be more specific than that?
Compare the screenshots, man!
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Other than the expander size which was fixed what is wrong? You need to be specific if you want any help!
He wants the tree items to be glossy. I was never able to get a working patch for it. If we ever got that working, TreeView widgets also have colors set for alternating items, which we could use in the download manager among other places
File a new bug for that. This bug is already fixed. Multiple patches in one bug causes problems.
Status: REOPENED → RESOLVED
Closed: 18 years ago18 years ago
Resolution: --- → FIXED
Summary: gtk: treeview look flat and out-of-place → gtk: expander in treeview is not the correct size
I filed another bug some time ago and there's not interest...
Depends on: 410881
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: