Bug 408990 - "gtk: expander in treeview is not the correct size" [p=ventnor.bugzilla@yahoo.com.au (Michael Ventnor) r+sr+a1.9=roc]