widget/src/gtk2/gtkdrawing.h
@@ -174,7 +174,9 @@ typedef enum {
   MOZ_GTK_TREE_HEADER_CELL,
   /* Paints sort arrows in treeheader cells */
   MOZ_GTK_TREE_HEADER_SORTARROW,
-  /* Paints a GtkExpander for treeviews */
+  /* Paints an expander for a GtkTreeView */
+  MOZ_GTK_TREEVIEW_EXPANDER,
+  /* Paints a GtkExpander */
   MOZ_GTK_EXPANDER,
   /* Paints the background of the menu bar. */
   MOZ_GTK_MENUBAR,
@@ -328,12 +330,20 @@ gint moz_gtk_get_dropdown_arrow_size(gint* width, gint* height);
 gint moz_gtk_get_toolbar_separator_width(gint* size);
 
 /**
- * Get the size of a treeview's expander (we call them twisties)
+ * Get the size of a regular GTK expander that shows/hides content
  * size:    [OUT] the size of the GTK expander, size = width = height.
  *
  * returns:    MOZ_GTK_SUCCESS if there was no error, an error code otherwise
  */
 gint moz_gtk_get_expander_size(gint* size);
+
+/**
+ * Get the size of a treeview's expander (we call them twisties)
+ * size:    [OUT] the size of the GTK expander, size = width = height.
+ *
+ * returns:    MOZ_GTK_SUCCESS if there was no error, an error code otherwise
+ */
+gint moz_gtk_get_treeview_expander_size(gint* size);
 
 /**
  * Get the desired height of a menu separator
